--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 </div>
                 <div class="chat-messages" id="chatMessages">
                     <div class="message">
-                        <div class="message-avatar ai-avatar">02</div>
+                        <div class="message-avatar ai-avatar"><image src="ZeroTwo.png"></image></div>
                         <div class="message-content ai-message">
                             <div class="message-sender ai-sender">Zero Two</div>
                             Привет, Дорогой! 💕 Я так рада видеть тебя здесь! Готов к увлекательной беседе? 🦖
